--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1062,7 +1062,7 @@
             "age_years": {"type": "same"},
             //"diet": {"type": "same"},
             "diet_type": {"type": "same"},
-            "multivitamin": {"type": "specified", "value": true},
+            "multivitamin": {"type": "specified", "value": "Yes"},
             "sleep_duration": {"type": "max"},
             "sex":  {"type": "same"}
         }
