Fix minor CSS issues on Diversity tab

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -160,6 +160,8 @@
     div.your_sample_diversity_inset .card-header {
       color: #ffffff;
       text-align: center;
+      border-radius: 15px 15px 0 0;
+      color: #006a96;
     }
 
     div.your_sample_diversity_inset .card-body {
