--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -915,7 +915,7 @@
                 $("#n_archaea_background").text(result["Archaea"].toLocaleString()).addClass("microbe-count").removeClass("spinner-grow spinner-grow-sm");
             });
         retrieveNeighbors(state, 1)
-            .then(queryNeighborAndSelfMetadata(state, ["age_years", "sugary_sweets_frequency"]))
+            .then(queryNeighborAndSelfMetadata(state, ["age_cat", "sugary_sweets_frequency"]))
             .then(fillResults(state, ["#age_nearest_neighbor", "#more_or_less_sweets_nearest_neighbor"]));
     }
 
@@ -1048,7 +1048,7 @@
             "types_of_plants": ["#beta_diversity_plants_per_week_response", "#beta_diversity_plants_per_week_value"],
             "probiotic_frequency": ["#beta_diversity_probiotics_response", "#beta_diversity_probiotics_value"],
             "exercise_frequency": ["#beta_diversity_exercise_response", "#beta_diversity_exercise_value"],
-            "age_years": ["#beta_diversity_age_response", "#beta_diversity_age_value"],
+            "age_cat": ["#beta_diversity_age_response", "#beta_diversity_age_value"],
             //"diet": ["",""],
             "diet_type": ["#beta_diversity_diet_type_response", "#beta_diversity_diet_type_value"],
             "multivitamin": ["#beta_diversity_multivitamin_response", "#beta_diversity_multivitamin_value"],
@@ -1059,10 +1059,10 @@
             "types_of_plants": {"type": "max"},
             "probiotic_frequency": {"type": "max"},
             "exercise_frequency": {"type": "max"},
-            "age_years": {"type": "same"},
+            "age_cat": {"type": "same"},
             //"diet": {"type": "same"},
             "diet_type": {"type": "same"},
-            "multivitamin": {"type": "specified", "value": true},
+            "multivitamin": {"type": "specified", "value": "Yes"},
             "sleep_duration": {"type": "max"},
             "sex":  {"type": "same"}
         }
@@ -1080,6 +1080,7 @@
         createTaxonomyTable(state);
 
         //Need to make taxa rank plot
+        /* BEGIN BLOCK COMMENTED OUT WHILE TAXA VIOLIN IS HIDDEN
         let sampling_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy?' +
             $.param({sample_size: 30000});
         let my_sample_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy/sample/' + state.barcode_prefix + state.sample_id;
@@ -1164,6 +1165,7 @@
             };
             Plotly.newPlot("taxa-violin", data, layout, {displayModeBar: false});
         });
+        END BLOCK COMMENTED OUT WHILE TAXA VIOLIN IS HIDDEN */
     }
 
     function updateObservedOTUs(state) {
@@ -1617,6 +1619,7 @@
               <p style='font-style: italic;'>
                   * {{ _('No evidence presented here indicates what we\'ve observed is clinically dangerous') }}
               </p>
+              <!--
               <hr/>
               <div class="row">
                   <div class="column results_text">
@@ -1629,11 +1632,12 @@
               </div>
               <div class="row">
                   <div class="col-md-8 mx-auto">
-                  <div id="taxa-violin">
+                    <div id="taxa-violin">
+                    </div>
                   </div>
               </div>
+              -->
           </div>
-        </div>
           <div class="tab-pane fade" id="dataset-info" role="tabpanel" aria-labelledby="dataset-tab">
             <div class="row">
               <div class="column results_text">
